<resources>
    <string name="app_name">Group Project - Out and About</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="continue_without_logging_in">Continue without Logging In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_email">User Email</string>

    <string-array name="time_options">
        <item>12:00</item>
        <item>12:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:0</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
    </string-array>

    <string-array name="ampm_options">
        <item>AM</item>
        <item>PM</item>
    </string-array>


    <string-array name="type_options">
        <item>RESTAURANT</item>
        <item>ENTERTAINMENT</item>
        <item>NIGHTLIFE</item>
        <item>OUTDOORS</item>
    </string-array>

    <string-array name="search_Radius_Options">
        <item>0.5</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>5.0</item>
        <item>10.0</item>
    </string-array>

    <string-array name="min_Rating_Options">
    <item>Any</item>
    <item>1.0</item>
    <item>1.5</item>
    <item>2.0</item>
    <item>2.5</item>
    <item>3.0</item>
    <item>3.5</item>
    <item>4.0</item>
    <item>4.5</item>
    </string-array>
</resources>